--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ flask = "^2.3.2"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.7.0"
+flake8 = "^7.2.0"
+pre-commit = "^4.2.0"
 
 [build-system]
 requires = ["poetry-core"]
