--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ services:
     build: .
     ports:
       - "8000:8000"
-    environment:
-      - NAME=${NAME}
+#    environment:
+#      - NAME=${NAME}
     volumes:
       - .:/app  # Bind mount: pasta atual do host -> /app no container
     networks:
