feat: executar aplicação em ambiente de desenvolvimento local

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - .:/app  # Bind mount: pasta atual do host -> /app no container
     networks:
       - desafio-devops
+    env_file:
+      - .env
 
 networks:
   desafio-devops:
