--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,15 @@ flask = "^2.3.2"
 black = "^23.7.0"
 flake8 = "^7.2.0"
 pre-commit = "^4.2.0"
+taskipy = "^1.14.1"
+ruff = "^0.11.10"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.taskipy.tasks]
+dev = "LOCAL=true ./start.sh"
+prod = "LOCAL=false ./start.sh"
+lint = "ruff check ."
+format = "ruff format ."
