chore: separa arquivos docker-compose para dev e prod

--- a/.dockerignore
+++ b/.dockerignore
@@ -9,6 +9,9 @@ __pycache__/
 .git/
 .gitignore
 .dockerignore
+Dockerfile
+docker-compose.dev.yml
+docker-compose.prod.yml
 
 # Arquivos de configuração locais e ferramentas
 *.log
